tests/paczka1/small_fuzzy/56217890.err
Error in line 5: zxH7YKk S393 4,0
Error in line 1: a4MXat A642 53,0
Error in line 6: zxH7YKk A131 88,6
Error in line 9: a4MXat A762 15,9
Error in line 11: a4MXat A131 55,9
